# SolarY

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile_VSRemoteContainers  MANIFEST.in  README.md  flake8  isort.cfg  mypy.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: python-main-branch-package.yml  python-package.yml  python-publish-pypi.yml
SolarY/: __init__.py  _version.py
SolarY/_config/: paths.ini
SolarY/_config/SPICE/: generic.ini
SolarY/asteroid/: __init__.py  physp.py
SolarY/auxiliary/: __init__.py  config.py  download.py  parse.py  reader.py
SolarY/general/: __init__.py  astrodyn.py  geometry.py  photometry.py  vec.py
SolarY/general/dynamics/: __init__.py  orbit.py  properties.py
SolarY/instruments/: __init__.py  camera.py  optics.py  telescope.py
SolarY/neo/: __init__.py  astrodyn.py  data.py
docs/: Makefile  README.rst  make.bat  requirements-docs.txt
docs/source/: api.rst  api.rst.old  conf.py  index.rst
docs/source/api/: index.rst
solary/: __init__.py
solary/_config/: constants.ini
solary/_config/SPICE/: generic.ini
solary/asteroid/: __init__.py  physp.py
solary/auxiliary/: __init__.py  config.py  download.py  parse.py  reader.py
solary/general/: __init__.py  astrodyn.py  geometry.py  photometry.py  vec.py
solary/instruments/: __init__.py  camera.py  optics.py  telescope.py
solary/neo/: __init__.py  data.py
solary/tests/: __init__.py  test_asteroid_physp.py  test_general_astrodyn.py  test_general_photometry.py  test_general_vec.py  test_neo_data.py
solary/tests/test_asteroid/: test_physp.py
solary/tests/test_auxiliary/: __init__.py  test_config.py  test_parse.py  test_reader.py
tests/: __init__.py
tests/test_asteroid/: __init__.py  test_physp.py
tests/test_auxiliary/: __init__.py  test_config.py  test_download.py  test_parse.py  test_reader.py
tests/test_general/: __init__.py  test_astrodyn.py  test_geometry.py  test_photometry.py  test_vec.py
tests/test_instruments/: __init__.py  test_camera.py  test_optics.py  test_telescope.py
tests/test_neo/: __init__.py  test_astrodyn.py  test_data.py
(+25 files in other folders)
