# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

# Versioneer is for later. See: https://github.com/python-versioneer/python-versioneer
# [versioneer]
# VCS = git
# style = pep440
# versionfile_source = solary/_version.py
# versionfile_build = solary/_version.py
# tag_prefix =
# parentdir_prefix = archon

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
# See https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = SolarY
version = attr: SolarY.__version__
url = https://github.com/ThomasAlbin/SolarY
description = A Space Science library for asteroid, comets and meteors.
long_description = file: README.md
long_description_content_type=text/markdown
author = attr: solary.__author__
# author_email = solary.__email__
project_urls =
    Source = https://github.com/ThomasAlbin/SolarY
    Tracker = https://github.com/ThomasAlbin/SolarY/issues
license= MIT License
keywords = asteroid, comets, meteors

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

platforms = unix, linux, osx, win32

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    wheel>=0.29.0
    setuptools>=30.3
install_requires =
    certifi
    requests
    spiceypy

python_requires = >=3.7

# [options.extras_require]
# some_name =
#    some_package

[options.packages.find]
exclude =
    contrib
    docs
    tests
    examples
